[gd_scene load_steps=9 format=3 uid="uid://jt80gv02u4f2"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_8msyy"]
[ext_resource type="Texture2D" uid="uid://d3um1i1lgu153" path="res://assets/heart.png" id="2_yyptq"]
[ext_resource type="Texture2D" uid="uid://c6ic03u2yvnk6" path="res://assets/controls/flatLightLeft.png" id="3_cxgb6"]
[ext_resource type="Texture2D" uid="uid://svp2vgo37htu" path="res://assets/controls/flatDarkLeft.png" id="4_w2trk"]
[ext_resource type="Texture2D" uid="uid://dsght3iwomray" path="res://assets/controls/flatLightRight.png" id="4_x1c4s"]
[ext_resource type="Texture2D" uid="uid://crocudarwwiec" path="res://assets/controls/flatLightA.png" id="5_p3p2e"]
[ext_resource type="Texture2D" uid="uid://cwxk6km6rqwl3" path="res://assets/controls/flatDarkRight.png" id="6_u38dk"]
[ext_resource type="Texture2D" uid="uid://vujn5y4v732w" path="res://assets/controls/flatDarkA.png" id="8_me7no"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_8msyy")

[node name="Start" type="Label" parent="."]
unique_name_in_owner = true
top_level = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -367.5
offset_top = -487.0
offset_right = 367.5
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Controls
Player One: Arrow Keys
Player Two: WASD

Press any key
to Start"
horizontal_alignment = 1

[node name="WinEnding" type="Label" parent="."]
unique_name_in_owner = true
visible = false
top_level = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -81.0
offset_right = 210.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "You Win!"
horizontal_alignment = 1

[node name="LoseEnding" type="Label" parent="."]
unique_name_in_owner = true
visible = false
top_level = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -81.0
offset_right = 210.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "You Lose!"
horizontal_alignment = 1

[node name="CollectedCoins" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 64.0
offset_top = 126.0
offset_right = 306.0
offset_bottom = 214.0
theme_override_font_sizes/font_size = 64
text = "Coins: 0"

[node name="TimeLeft" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 64.0
offset_top = 40.0
offset_right = 306.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 64
text = "0"

[node name="Lives" type="TextureRect" parent="."]
unique_name_in_owner = true
offset_left = 60.0
offset_top = 220.0
offset_right = 124.0
offset_bottom = 284.0
texture = ExtResource("2_yyptq")
expand_mode = 1
stretch_mode = 1

[node name="MovePlayerLeft" type="TouchScreenButton" parent="."]
modulate = Color(1, 1, 1, 0.74902)
texture_filter = 1
position = Vector2(80, 845)
scale = Vector2(2.3, 2.3)
texture_normal = ExtResource("3_cxgb6")
texture_pressed = ExtResource("4_w2trk")
passby_press = true
action = "player_1_left"
visibility_mode = 1

[node name="MovePlayerRight" type="TouchScreenButton" parent="."]
modulate = Color(1, 1, 1, 0.74902)
texture_filter = 1
position = Vector2(400, 845)
scale = Vector2(2.3, 2.3)
texture_normal = ExtResource("4_x1c4s")
texture_pressed = ExtResource("6_u38dk")
passby_press = true
action = "player_1_right"
visibility_mode = 1

[node name="Jump" type="TouchScreenButton" parent="."]
modulate = Color(1, 1, 1, 0.74902)
texture_filter = 1
position = Vector2(1695, 845)
scale = Vector2(2.3, 2.3)
texture_normal = ExtResource("5_p3p2e")
texture_pressed = ExtResource("8_me7no")
passby_press = true
action = "player_1_jump"
visibility_mode = 1
